Changing sort order for aliases

--- a/config/httpd.conf.erb
+++ b/config/httpd.conf.erb
@@ -22,7 +22,7 @@
 	RewriteRule ^/portfolio/<%= key %>(/)? /portfolio/gallery.php?title=<%= value_hash['title'] %>&setId=<%= value_hash['sid'] %>&nsId=<%= value_hash['nsid'] %> [P,L]
 <% end -%><% end -%>
 <% if @aliases -%>
-<% aliases.each_pair do |key, value_hash| -%>
+<% aliases.sort_by {|key, value| key}.each do |key, value_hash| -%>
 
 	Alias <%= value_hash['root'] %>/ "<%= value_hash['file'] %>"
 	Alias <%= value_hash['root'] %> "<%= value_hash['file'] %>"
