Adding server ip to help memory

--- a/config/httpd.conf.erb
+++ b/config/httpd.conf.erb
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost <%= server_ip %>:80>
 	ServerAdmin <%= server_admin %>
 	DocumentRoot <%= document_root %>/
 	ServerName <%= server_name %>
