--- a/deadlypenguin/code/karma/karma.css
+++ b/deadlypenguin/code/karma/karma.css
@@ -33,3 +33,23 @@
 #new-nick {
 	color: #333;
 }
+
+#log-title {
+	text-align: center;
+}
+
+.rank {
+	float: left;
+	margin: -10px 10px -10px -15px;
+	border-right: 1px solid #ddd;
+	height: 41px;
+	line-height: 41px;
+	padding: 0px 10px;
+	font-weight: bold;
+	color: #fff;
+	background-color: #ddd;
+	max-width: 40px;
+	min-width: 40px;
+	width: 40px;
+	text-align: center;
+}
